<?xml version="1.0"?>
<package format="2">
  <name>ntrip_ros</name>
  <version>0.0.1</version>
  <description>This package provides ntrip_ros functionality</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="mhutchinson@sagarobotics.com">Michael Hutchinson</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>

  <!-- <depend>mavros_msgs</depend> -->
  <!-- <depend>nmea_msgs</depend> -->

</package>
